--- a/ball.html
+++ b/ball.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="ball.css">
 </head>
 <body>
-    <div class="contenedor"><a href="index.html" class="centro">Página Principal </a></div>
-    <div class="ball"></div>
+    <div class="contenedor"><p class="centro">Presione la pelota para volver a la página principal</p></div>
+    <div class="ball"><a href="index.html" class="link"></a></div>
 </body>
 </html>
