--- a/index.html
+++ b/index.html
@@ -24,19 +24,16 @@
     <div class="links">
         <div class="boton">
             <img class="img-boton" src="https://a.ltrbxd.com/resized/avatar/upload/4/4/9/1/5/7/6/shard/avtr-0-1000-0-1000-crop.jpg?v=e23210526c" alt="identikit">
-            <a href="." class="link-boton">Identikit</a>
-            <button class="compartir">⋮</button>
+            <a href="identikit.html" class="link-boton">Identikit</a>
         </div>
         <div class="boton">
             <img class="img-boton" src="wordpress.png" alt="img">
             <a href="blog4.html" class="link-boton">Blogs</a>
-            <button class="compartir">⋮</button>
         </div>
         <div class="boton">
             <img class="img-boton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/Solid_red.svg/2048px-Solid_red.svg.png"
              alt="ball">
             <a href="ball.html" class="link-boton">Animación</a>
-            <button class="compartir">⋮</button>
         </div>
     </div>
     
