--- a/identikit.html
+++ b/identikit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identikit - Ignacio Rodriguez</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="identikit.css">
 </head>
 <body>
     <center><table>
