--- a/identikit.html
+++ b/identikit.html
@@ -68,7 +68,7 @@
 
     <footer>
         <p>
-        <a href="index.html"
+        <a href="blog4.html"
         target="_blank">Linktree</a>
         </p>
         
