--- a/identikit.html
+++ b/identikit.html
@@ -68,8 +68,7 @@
 
     <footer>
         <p>
-        <a href="index.html"
-        target="_blank">Linktree</a>
+        <a href="index.html">Linktree</a>
         </p>
         
         <p>
