--- a/contacto.html
+++ b/contacto.html
@@ -9,20 +9,19 @@
 <body>
     <div class="form-container">
         <h2>Contacto</h2>
-        <p>Por favor, completá la siguiente información para ponerte en contacto con nosotros.</p>
         
         <form action="#" method="POST">
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Tu nombre completo" required>
+            <input type="text" id="nombre" name="nombre"  required>
 
             <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
+            <input type="email" id="email" name="email"  required>
 
             <label for="telefono">Teléfono</label>
-            <input type="tel" id="telefono" name="telefono" placeholder="Tu número de teléfono" required>
+            <input type="tel" id="telefono" name="telefono"  required>
 
             <label for="mensaje">Mensaje</label>
-            <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
+            <textarea id="mensaje" name="mensaje"  required></textarea>
 
             <button type="submit">Enviar</button>
         </form>
