--- a/blog4.html
+++ b/blog4.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link rel="stylesheet" href="blog4.css">
+
+    <!-- Favicon clásico (16x16 o 32x32) -->
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/blog -16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/blog -32x32.png">
+
+  <!-- Favicon para pantallas Retina -->
+  <link rel="icon" type="image/png" sizes="64x64" href="favicons/blog -16x16.png">
+
+  <!-- Apple Touch Icon (para iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/blog - 180x180.png">
+    
 </head>
 <body>
     <div>
