--- a/identikit.html
+++ b/identikit.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identikit - Ignacio Rodriguez</title>
     <link rel="stylesheet" href="identikit.css">
+
+    <!-- Favicon clásico (16x16 o 32x32) -->
+  <link rel="icon" type="image/png" sizes="16x16" href=favicons/identikit -16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=favicons/identikit -32x32.png">
+
+  <!-- Apple Touch Icon (para iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href=favicons/identikit -180x180.png">
+    
 </head>
 <body>
     <center><table>
