--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ignacio Rodriguez Costantini</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Favicon clásico (16x16 o 32x32) -->
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/linktree -16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/linktree -32x32.png">
+
+  <!-- Apple Touch Icon (para iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/linktree -180x180.png">
+    
 </head>
 
 <body>
