--- a/ball.html
+++ b/ball.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ball</title>
     <link rel="stylesheet" href="ball.css">
+     <!-- Favicon clásico (16x16 o 32x32) -->
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/ball -16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/ball -32x32.png">
+
+  <!-- Apple Touch Icon (para iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/ball -180x180.png">
 </head>
 <body>
     <div class="contenedor"><p class="centro">Presione la pelota para volver a la página principal</p></div>
