--- a/inteligencia_artificial.html
+++ b/inteligencia_artificial.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Revolución de la Inteligencia Artificial</title>
     <link rel="stylesheet" href="inteligencia_artificial.css">
+     <!-- Favicon clásico (16x16 o 32x32) -->
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/blog -16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/blog -32x32.png">
+
+  <!-- Apple Touch Icon (para iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/blog - 180x180.png">
 </head>
 <body>
     <div class="contenedor">
