--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
              alt="ball">
             <a href="ball.html" class="link-boton">Animación</a>
         </div>
+        <div class="boton">
+            <img class="img-boton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/2560px-Star_Wars_Logo.svg.png"
+             alt="ball">
+            <a href="https://ignaciorodriguezcos.github.io/tpo-final-juego/" class="link-boton">Juego</a>
+        </div>
     </div>
     
 </body>
