--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="boton">
             <img class="img-boton" src="https://static.wikia.nocookie.net/star-wars-canon/images/c/c5/Anakin%27s_pod.jpg/revision/latest?cb=20161227063342"
              alt="ball">
-            <a href="https://ignaciorodriguezcos.github.io/podracer/index.html" class="link-boton">Podracer</a>
+            <a href="https://ignaciorodriguezcos.github.io/Podracer/index.html" class="link-boton">Podracer</a>
         </div>
     </div>
     
