--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://ignaciorodriguezcos.github.io/tpo-final-juego/" class="link-boton">Shooter</a>
         </div>
         <div class="boton">
-            <img class="img-boton" src="https://static.wikia.nocookie.net/star-wars-canon/images/c/c5/Anakin%27s_pod.jpg/revision/latest?cb=20161227063342"
+            <img class="img-boton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/2560px-Star_Wars_Logo.svg.png"
              alt="ball">
             <a href="https://ignaciorodriguezcos.github.io/Podracer/indexpod.html" class="link-boton">Podracer</a>
         </div>
