--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="boton">
             <img class="img-boton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/2560px-Star_Wars_Logo.svg.png"
              alt="ball">
-            <a href="https://ignaciorodriguezcos.github.io/Podracer/indexpod.html" class="link-boton">Podracer</a>
+            <a href="indexpod.html" class="link-boton">Podracer</a>
         </div>
     </div>
     
