Update podracer logo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://ignaciorodriguezcos.github.io/tpo-final-juego/" class="link-boton">Shooter</a>
         </div>
         <div class="boton">
-            <img class="img-boton" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/2560px-Star_Wars_Logo.svg.png"
+            <img class="img-boton" src="https://static.wikia.nocookie.net/starwars/images/0/0a/AnakinsRadonUlzerPodracer-CGSWG.png/revision/latest/scale-to-width-down/1000?cb=20250206055405"
              alt="ball">
             <a href="indexpod.html" class="link-boton">Podracer</a>
         </div>
