Update index.html link of indexpod.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="boton">
             <img class="img-boton" src="https://static.wikia.nocookie.net/starwars/images/0/0a/AnakinsRadonUlzerPodracer-CGSWG.png/revision/latest/scale-to-width-down/1000?cb=20250206055405"
              alt="ball">
-            <a href="indexpod.html" class="link-boton">Podracer</a>
+            <a href="Podracer/indexpod.html" class="link-boton">Podracer</a>
         </div>
     </div>
     
