Update index.html logo for indexpod

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://ignaciorodriguezcos.github.io/tpo-final-juego/" class="link-boton">Shooter</a>
         </div>
         <div class="boton">
-            <img class="img-boton" src="https://static.wikia.nocookie.net/starwars/images/0/0a/AnakinsRadonUlzerPodracer-CGSWG.png/revision/latest/scale-to-width-down/1000?cb=20250206055405"
+            <img class="img-boton" src="https://static.wikia.nocookie.net/starwars/images/0/0a/AnakinsRadonUlzerPodracer-CGSWG.png"
              alt="ball">
             <a href="Podracer/indexpod.html" class="link-boton">Podracer</a>
         </div>
