--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
              alt="ball">
             <a href="Podracer/indexpod.html" class="link-boton">Podracer</a>
         </div>
+        <div class="boton">
+            <img class="img-boton" src="https://play.google.com/store/apps/details/Among+Us?id=com.innersloth.spacemafia&hl=es"
+             alt="ball">
+            <a href="impostor.html" class="link-boton">Impostor</a>
+        </div>
     </div>
     
 </body>
 
 </html>
+
