--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <a href="Podracer/indexpod.html" class="link-boton">Podracer</a>
         </div>
         <div class="boton">
-            <img class="img-boton" src="https://play.google.com/store/apps/details/Among+Us?id=com.innersloth.spacemafia&hl=es"
-             alt="ball">
+            <img class="img-boton" src="https://play-lh.googleusercontent.com/8ddL1kuoNUB5vUvgDVjYY3_6HwQcrg1K2fd_R8soD-e2QYj8fT9cfhfh3G0hnSruLKec"
+             alt="impostor">
             <a href="impostor.html" class="link-boton">Impostor</a>
         </div>
     </div>
@@ -63,4 +63,5 @@
 </body>
 
 </html>
+
 
